--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -1,11 +1,22 @@
 body {
    margin: 0;
-   padding-top: 72px;
+   margin-top: 68px;
    font-family: sans-serif;
+   background: white;
+}
+
+.billboard h1 {
+   font-size: 3em;
+}
+
+.billboard {
+   text-align: center;
+   background: #eee;
+   padding: 1em;
 }
 
 button {
-   background-color: $primary-color;
+   background-color: rgb(0, 212, 132);
    color: white;
    border: none;
    border-radius: 4px;
@@ -16,5 +27,24 @@ button {
 
 button:hover {
    cursor: pointer;
-   background-color: $primary-color-highlight;
+   background-color: rgb(100, 212, 132);
+}
+
+.container {
+   padding: 0 1em;
+   max-width: 1024px;
+   margin: 0 auto;
+}
+
+nav {
+   background-color: rgb(0, 212, 132);
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+}
+
+nav h1 {
+   color: white;
+   display: inline-block;
 }
