make reasons to use flush

--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -25,6 +25,10 @@ button {
    margin: 0.25em 0.5em;
 }
 
+#reasons-to-use {
+   margin: 0 -0.5em;
+}
+
 .reason-to-use {
    display: inline-block;
    width: 33%;
