--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -15,6 +15,10 @@ body {
    padding: 1em;
 }
 
+#quick-start-steps {
+   padding: 0;
+}
+
 button {
    background-color: rgb(0, 212, 132);
    color: white;
