--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -75,6 +75,22 @@ button:hover {
    max-height: 500px;
 }
 
+.navigation-menu > .menu-items {
+   padding: 0;
+   list-style-type: none;
+   margin: 0;
+   border: solid 1px white;
+   border-width: 1px 0;
+}
+
+li.menu-item div {
+    padding: 12px 16px;
+    font-size: 1.25em;
+    border: solid 1px white;
+    border-width: 1px 0;
+    background: rgb(136, 219, 188);
+}
+
 #menu-button {
    position: absolute;
    top: 8px;
