--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -95,12 +95,20 @@ button:hover {
    border-width: 1px 0;
 }
 
-li.menu-item div {
-    padding: 12px 16px;
-    font-size: 1.25em;
-    border: solid 1px white;
-    border-width: 1px 0;
-    background: rgb(136, 219, 188);
+li.menu-item {
+
+   > a {
+      color: white;
+      text-decoration: none;
+   }
+
+   div {
+       padding: 12px 16px;
+       font-size: 1.25em;
+       border: solid 1px white;
+       border-width: 1px 0;
+       background: rgb(136, 219, 188);
+   }
 }
 
 #menu-button {
