--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/susy/sass/susy"; //"susy"
+@import "../../node_modules/breakpoint-sass/stylesheets/breakpoint"; //"breakpoint"
 
 @import "variables";
 
