--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -44,7 +44,11 @@ button {
    @include container;
 
    .reason-to-use {
-      @include span(4 of 12);
+      @include span(12 of 12);
+
+      @include breakpoint($tablet-width) {
+         @include span(4 of 12);
+      }
 
       &:nth-child(3n) {
          @include last;
