--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -1,4 +1,4 @@
 $primary-color: rgb(0, 212, 132);
 $primary-color-highlight: rgb(100, 212, 132);
 
-$smartphone-width: 600px;
+$tablet-width: 600px;
