--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -1,4 +1,6 @@
 $primary-color: rgb(0, 212, 132);
 $primary-color-highlight: rgb(100, 212, 132);
 
+$page-container-width: 1024px;
+
 $tablet-width: 600px;
