--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -9,6 +9,14 @@ body {
    font-size: 5em;
 }
 
+h2 {
+   font-size: 2em;
+}
+
+h3 {
+   font-size: 1.5em
+}
+
 .billboard {
    text-align: center;
    background: #eee;
