--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -51,10 +51,37 @@ h3 {
 
 #quick-start-steps {
    padding: 0;
+   list-style-type: none;
+
+   li {
+      counter-increment: step-counter;
+
+      &::before {
+         content: counter(step-counter);
+         background: $primary-color;
+         display: inline-block;
+         float: left;
+         font-size: 1.5em;
+         font-weight: bold;
+         color: white;
+         border-radius: 50%;
+         width: 1.25em;
+         padding: 0.25em;
+         text-align: center;
+         margin: 0.25em 0.5em;
+         margin-left: 0;
+      }
+
+      h3 {
+         margin: 0;
+         padding: 0.5em;
+         border-bottom: solid 2px $primary-color;
+      }
+   }
 }
 
 button {
-   background-color: rgb(0, 212, 132);
+   background-color: $primary-color;
    color: white;
    border: none;
    border-radius: 4px;
