have smaller logo on mobile

--- a/public/sass/_home-page.scss
+++ b/public/sass/_home-page.scss
@@ -29,7 +29,11 @@
          }
 
          #alsatian-logo {
-             height: 128px;
+            height: 96px;
+
+            @include breakpoint($tablet-width) {
+                height:128px;
+            }
          }
       }
    }
