--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -98,6 +98,7 @@ button {
 
    .reason-to-use {
       @include span(12 of 12);
+      text-align: center;
 
       @include breakpoint($tablet-width) {
          @include span(4 of 12);
@@ -105,6 +106,25 @@ button {
 
       &:nth-child(3n) {
          @include last;
+      }
+
+      .reason-icon {
+
+          display: inline-block;
+          border-radius: 50%;
+          background: #eee;
+          width: 96px;
+          height: 96px;
+          overflow: visible;
+          position: relative;
+          border: 6px solid #aaa;
+
+          img {
+              width: 116px;
+              position: absolute;
+              top: -12px;
+              left: -12px;
+          }
       }
    }
 }
