--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -99,6 +99,8 @@ button {
    .reason-to-use {
       @include span(12 of 12);
       text-align: center;
+      padding: 12px;
+      box-sizing: border-box;
 
       @include breakpoint($tablet-width) {
          @include span(4 of 12);
