--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -91,10 +91,11 @@ button {
    font-size: 1.5em;
    padding: 0.25em 0.5em;
    margin: 0.25em 0.5em;
+   outline: none;
 
    &:hover {
       cursor: pointer;
-      background-color: #55DFAB;
+      background-color: $primary-color-light;
    }
 }
 
