--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: rgb(0, 212, 132);
-$primary-color-highlight: rgb(100, 212, 132);
+$primary-color: #00d484;
+$primary-color-light: #55DFAB;
 
 $page-container-width: 1024px;
 
