style shell commands

--- a/public/sass/_code.scss
+++ b/public/sass/_code.scss
@@ -18,4 +18,10 @@ pre {
          }
       }
    }
+
+   &.language-shell {
+       padding: 24px 32px;
+       background: #333;
+       color: #eee;
+   }
 }
