--- a/public/sass/_code.scss
+++ b/public/sass/_code.scss
@@ -9,12 +9,16 @@ pre {
             color: blue;
          }
 
-         &.class-name, &.function {
-            color: green;
+         &.class-name {
+             color: rgb(38, 127, 153);
+         }
+
+         &.function {
+            color: rgb(121, 94, 38);
          }
 
          &.string {
-            color: red;
+            color: rgb(163, 21, 21);
          }
       }
    }
