--- a/public/sass/_core.scss
+++ b/public/sass/_core.scss
@@ -112,6 +112,7 @@ button {
       text-align: center;
       padding: 12px;
       box-sizing: border-box;
+      height: 350px;
 
       &.smart, &.loyal {
           .reason-icon {
