--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -3,6 +3,7 @@ $primary-color-light: #55DFAB;
 
 $page-container-width: 1024px;
 
+$large-phone-width: 420px;
 $tablet-width: 600px;
 
 $font-bold: 700;
