--- a/public/src/styles/stylesheets/app.scss
+++ b/public/src/styles/stylesheets/app.scss
@@ -1,3 +1,9 @@
-body {
-    font-family: sans-serif;
-}
+@import "../../../../node_modules/susy/sass/susy"; //"susy"
+@import "../../../../node_modules/breakpoint-sass/stylesheets/breakpoint"; //"breakpoint"
+
+@import "../variables";
+
+@import "../core";
+@import "../navigation";
+@import "../code";
+@import "../home-page";
