--- a/public/src/styles/_code.scss
+++ b/public/src/styles/_code.scss
@@ -25,7 +25,7 @@ pre {
       }
    }
 
-   &.language-shell {
+   &.language-powershell {
        padding: 24px 32px;
        background: #333;
        color: #eee;
