--- a/public/src/styles/_code.scss
+++ b/public/src/styles/_code.scss
@@ -2,6 +2,9 @@
 
 pre {
 
+   background: #fcfcfc;
+   border-left: 4px solid $primary-color;
+
    overflow-x: auto;
 
    code.language-typescript {
@@ -28,6 +31,7 @@ pre {
    &.language-powershell {
        padding: 24px 32px;
        background: #333;
+       border-left: none;
        color: #eee;
    }
 }
